Fix 'No control points are created for association lines in "spline" layout default mode'

BUG:414520
FIXED-IN:2.29.90 (KDE Applications 19.11.90)